<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_tieptuc_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/botron_button"

        android:padding="8dp"
        android:text="@string/tiepTuc"
        android:textAllCaps="false"

        app:layout_constraintTop_toBottomOf="@id/gl1">

    </Button>

    <EditText
        android:id="@+id/editText_nmk_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/botron"
        android:hint="@string/nhapMatKhau"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="#8E8E8E"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/editText_nlmk"></EditText>

    <EditText
        android:id="@+id/editText_nlmk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/botron"
        android:hint="@string/nhapLaiMatKhau"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="#8E8E8E"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/btn_tieptuc_main"></EditText>


    <EditText
        android:id="@+id/editText_ttk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/botron"
        android:hint="@string/tenTaiKhoan"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="#8E8E8E"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/editText_nmk_main"></EditText>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView_dktk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/dangKyTaiKhoan"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/editText_ttk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></TextView>

    <TextView
        android:id="@+id/tv_baoloi_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text=""
        android:textColor="#F10000"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/btn_tieptuc_main"
        app:layout_constraintTop_toBottomOf="@id/btn_tieptuc_main"></TextView>

    <TextView
        android:id="@+id/tv_yeucau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/yeuCau"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/btn_tieptuc_main"
        app:layout_constraintTop_toBottomOf="@id/tv_baoloi_main"></TextView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"></androidx.constraintlayout.widget.Guideline>


</androidx.constraintlayout.widget.ConstraintLayout>